Animations can be fully loaded from a component.